# salt-api-2021

./: .dockerignore  .gitignore  Dockerfile  Makefile  check.sh  docker-compose.yml  lint.sh  mkdocs.yml  mypy.ini  pyproject.toml  tox.ini
docs/: api.md  development.md  implementation.md  index.md
saltapi/: exceptions.py  logging_config.py  main.py  settings.py  util.py
saltapi/proposals/: api.py
saltapi/repository/: authentication.py  block_repository.py  bvit_repository.py  database.py  finder_chart_repository.py  finding_chart_repository.py  hrs_repository.py  institution_repository.py  instrument_repository.py  models.py  mos_repository.py  proposal_repository.py  rss_repository.py  salticam_repository.py  submission_repository.py  target_repository.py  unit_of_work.py  user_repository.py
saltapi/service/: authentication.py  authentication_service.py  block.py  block_service.py  create_html.py  finder_chart_service.py  finding_chart_service.py  institution_service.py  instrument.py  instrument_service.py  mail_service.py  mos_service.py  observation_service.py  observations_service.py  permission_service.py  proposal.py  proposal_service.py  submission.py  submission_service.py  target.py  user.py  user_service.py
saltapi/templates/: proposal_progress.html
saltapi/web/: schemas.py  services.py
tests/: conftest.py  markers.py  test_hello_world.py  test_util.py  zanele.js
tests/integration/: test_finder_charts.py  test_finding_charts.py  test_user.py  test_who_am_i.py
tests/repository/: fake_user_repository.py  test_block_repository.py  (+12 more)
(+131 files in other folders)
