[tool.poetry]
name = "saltapi"
version = "0.1.0"
description = "SALT API"
authors = ["SALT Astronomy Operations <salt-software@saao.ac.za>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
python-multipart = "^0.0.5"
Jinja2 = "^2.11.3"
aiofiles = "^0.6.0"
dsnparse = "^0.1.15"
astropy = "^4.2.1"
xmltodict = "^0.12.0"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^1.8.2"}
PyMySQL = "^1.0.2"
SQLAlchemy = "^1.4.20"
inflect = "^5.3.0"
python-dateutil = "^2.8.2"
pytz = "^2021.1"
freezegun = "^1.1.0"
loguru = "^0.5.3"
sentry-sdk = "^1.3.1"
bcrypt = "^3.2.0"
defusedxml = "^0.7.1"
fastapi = "^0.76.0"
pdfkit = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^3.8.4"
flake8-print = "^4.0.0"
tox = "^3.21.4"
isort = "^5.7.0"
mypy = "^0.800"
pytest-cov = "^2.11.1"
bandit = "^1.7.0"
mkdocs-material = "^6.2.7"
requests = "^2.25.1"
pydantic = {extras = ["dotenv"], version = "^1.8.1"}
pytest-asyncio = "^0.14.0"
mkdocs-macros-plugin = "^0.5.0"
syrupy = "^1.2.2"
PyYAML = "^5.4.1"
pytest-bdd = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
